--- a/src/app/_pagine/home/home.component.html
+++ b/src/app/_pagine/home/home.component.html
@@ -1,12 +1,12 @@
-<div class="container-fluid my-4">
+<div class="container-fluid mb-4">
 	<app-breadcrumb-home [pagina]="'Home'" [breadcrumb]="'Tutti'"></app-breadcrumb-home>
 	<app-contenitore [dataElementi]="dataElementi"></app-contenitore>
 </div>
-<div class="container-fluid my-4">
+<div class="container-fluid mb-4">
 	<app-breadcrumb-home [pagina]="'Home'" [breadcrumb]="'Film'"></app-breadcrumb-home>
 	<app-contenitore [dataElementi]="dataFilm" [link]="'1/2'"></app-contenitore>
 </div>
-<div class="container-fluid my-4">
+<div class="container-fluid mb-4">
 	<app-breadcrumb-home [pagina]="'Home'" [breadcrumb]="'SerieTv'"></app-breadcrumb-home>
 	<app-contenitore [dataElementi]="dataSerie" [link]="'2/2'"></app-contenitore>
 </div>
