--- a/src/app/_componenti/btn-dashboard/btn-dashboard.component.html
+++ b/src/app/_componenti/btn-dashboard/btn-dashboard.component.html
@@ -1,1 +1,1 @@
-<a href="javascript:void(0)" [routerLink]="['/dashboard']" [routerLinkActive]="['active']" class="btn btn-sm btn-outline-warning">DashBoard</a>
+<a href="javascript:void(0)" [routerLink]="['/dashboard']" [routerLinkActive]="['active']" class="btn btn-sm p-1 btn-outline-warning">DashBoard</a>
