--- a/src/app/_componenti/sidebar/sidebar.component.html
+++ b/src/app/_componenti/sidebar/sidebar.component.html
@@ -146,7 +146,7 @@
 				<img src="assets/svg/userPlaceholder.svg" alt="" width="30" height="30" class="rounded-circle me-1" />
 				<span class="me-auto ms-3 dropdown-toggle" [ngClass]="{ 'd-none': isCollapsed }"><strong>Admin</strong></span>
 			</div>
-			<ul class="dropdown-menu text-small shadow z-2">
+			<ul class="dropdown-menu text-small shadow drop">
 				<li>
 					<a href="javascript:void(0)" [routerLink]="['/profilo/set-crediti']" class="dropdown-item p-2"
 						><i class="bi bi-database-add me-1"></i> Aggiungi Crediti</a
