--- a/src/app/_pagine/dashboard/dashboard.component.html
+++ b/src/app/_pagine/dashboard/dashboard.component.html
@@ -1,42 +1,5 @@
-<div class="container-fluid border rounded-1 m-3 p-3 tabella">
-	<h3>Info</h3>
-	<form>
-		<div class="mb-3 row">
-			<label for="table-filtering-search" class="col-xs-3 col-sm-auto col-form-label">Full text search:</label>
-			<div class="col-xs-3 col-sm-auto">
-				<input id="table-filtering-search" class="form-control" type="text" [formControl]="filter" />
-			</div>
-		</div>
-	</form>
-
-	<table class="table table-striped w-100">
-		<thead>
-			<tr>
-				<th scope="col">#</th>
-				<th scope="col">Country</th>
-				<th scope="col">Area</th>
-				<th scope="col">Population</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr *ngFor="let country of countries$ | async; index as i">
-				<th scope="row">{{ i + 1 }}</th>
-				<td>
-					<img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="me-2" style="width: 20px" />
-					<ngb-highlight [result]="country.name" [term]="filter.value"></ngb-highlight>
-				</td>
-				<td><ngb-highlight [result]="country.area | number" [term]="filter.value"></ngb-highlight></td>
-				<td><ngb-highlight [result]="country.population | number" [term]="filter.value"></ngb-highlight></td>
-			</tr>
-		</tbody>
-	</table>
-	<div class="d-flex justify-content-between p-2">
-		<ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize" (pageChange)="refreshCountries()"> </ngb-pagination>
-
-		<select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshCountries()">
-			<option [ngValue]="2">2 items per page</option>
-			<option [ngValue]="4">4 items per page</option>
-			<option [ngValue]="6">6 items per page</option>
-		</select>
-	</div>
+<div class="container-fluid mt-3 d-flex flex-column gap-3">
+	<app-view-utenti></app-view-utenti>
+	<app-view-indirizzi></app-view-indirizzi>
+	<app-view-recapiti></app-view-recapiti>
 </div>
